--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "private": true,
-  "packageManager": "pnpm@7.0.1",
+  "packageManager": "pnpm@7.5.0",
   "scripts": {
     "build": "nuxi build",
-    "dev": "nuxi dev --port 5000",
+    "dev": "nuxi dev",
     "start": "node .output/server/index.mjs",
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.23.0",
-    "@iconify-json/carbon": "^1.1.4",
-    "@iconify-json/twemoji": "^1.1.4",
-    "@iconify-json/ri": "^1.1.1",
-    "@nuxtjs/color-mode": "^3.0.3",
+    "@antfu/eslint-config": "^0.25.2",
+    "@iconify-json/carbon": "^1.1.6",
+    "@iconify-json/ri": "^1.1.3",
+    "@iconify-json/twemoji": "^1.1.5",
+    "@nuxtjs/color-mode": "^3.1.4",
     "@pinia/nuxt": "^0.1.9",
-    "@unocss/nuxt": "^0.33.2",
-    "@vueuse/nuxt": "^8.4.2",
-    "eslint": "^8.15.0",
-    "nuxt": "^3.0.0-rc.3",
+    "@unocss/nuxt": "^0.43.2",
+    "@vueuse/nuxt": "^8.8.0",
+    "eslint": "^8.19.0",
+    "nuxt": "^3.0.0-rc.4",
     "pinia": "^2.0.14",
-    "typescript": "^4.6.4"
+    "typescript": "^4.7.4"
   }
 }
