--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "nuxi build",
     "dev": "nuxi dev",
     "start": "node .output/server/index.mjs",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "nuxi prepare"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.25.2",
@@ -13,12 +14,12 @@
     "@iconify-json/ri": "^1.1.3",
     "@iconify-json/twemoji": "^1.1.5",
     "@nuxtjs/color-mode": "^3.1.4",
-    "@pinia/nuxt": "^0.1.9",
-    "@unocss/nuxt": "^0.43.2",
-    "@vueuse/nuxt": "^8.8.0",
-    "eslint": "^8.19.0",
-    "nuxt": "^3.0.0-rc.4",
-    "pinia": "^2.0.14",
+    "@pinia/nuxt": "^0.3.0",
+    "@unocss/nuxt": "^0.44.5",
+    "@vueuse/nuxt": "^8.9.4",
+    "eslint": "^8.20.0",
+    "nuxt": "^3.0.0-rc.6",
+    "pinia": "^2.0.16",
     "typescript": "^4.7.4"
   }
 }
