--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "packageManager": "pnpm@7.5.0",
+  "packageManager": "pnpm@7.18.0",
   "scripts": {
     "build": "nuxi build",
     "dev": "nuxi dev",
@@ -9,17 +9,17 @@
     "postinstall": "nuxi prepare"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.25.2",
-    "@iconify-json/carbon": "^1.1.6",
-    "@iconify-json/ri": "^1.1.3",
-    "@iconify-json/twemoji": "^1.1.5",
-    "@nuxtjs/color-mode": "^3.1.4",
-    "@pinia/nuxt": "^0.3.0",
-    "@unocss/nuxt": "^0.44.5",
-    "@vueuse/nuxt": "^8.9.4",
-    "eslint": "^8.20.0",
-    "nuxt": "^3.0.0-rc.6",
-    "pinia": "^2.0.16",
-    "typescript": "^4.7.4"
+    "@antfu/eslint-config": "^0.33.1",
+    "@iconify-json/carbon": "^1.1.11",
+    "@iconify-json/ri": "^1.1.4",
+    "@iconify-json/twemoji": "^1.1.7",
+    "@nuxtjs/color-mode": "^3.2.0",
+    "@pinia/nuxt": "^0.4.6",
+    "@unocss/nuxt": "^0.47.5",
+    "@vueuse/nuxt": "^9.6.0",
+    "eslint": "^8.29.0",
+    "nuxt": "^3.0.0",
+    "pinia": "^2.0.27",
+    "typescript": "^4.9.3"
   }
 }
