--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "packageManager": "pnpm@7.18.0",
+  "packageManager": "pnpm@8.7.4",
   "scripts": {
     "build": "nuxi build",
     "dev": "nuxi dev",
@@ -9,17 +9,19 @@
     "postinstall": "nuxi prepare"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.34.0",
-    "@iconify-json/carbon": "^1.1.11",
-    "@iconify-json/ri": "^1.1.4",
-    "@iconify-json/twemoji": "^1.1.7",
-    "@nuxtjs/color-mode": "^3.2.0",
-    "@pinia/nuxt": "^0.4.6",
-    "@unocss/nuxt": "^0.47.6",
-    "@vueuse/nuxt": "^9.6.0",
-    "eslint": "^8.29.0",
-    "nuxt": "^3.0.0",
-    "pinia": "^2.0.28",
-    "typescript": "^4.9.4"
+    "@antfu/eslint-config": "^0.41.0",
+    "@iconify-json/carbon": "^1.1.21",
+    "@iconify-json/ri": "^1.1.12",
+    "@iconify-json/twemoji": "^1.1.12",
+    "@nuxt/devtools": "^0.8.3",
+    "@nuxtjs/color-mode": "^3.3.0",
+    "@pinia/nuxt": "^0.4.11",
+    "@unocss/nuxt": "^0.55.7",
+    "@vite-pwa/nuxt": "^0.1.0",
+    "@vueuse/nuxt": "^10.4.1",
+    "eslint": "^8.48.0",
+    "nuxt": "^3.7.1",
+    "pinia": "^2.1.6",
+    "typescript": "^5.2.2"
   }
 }
