--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
   "private": true,
-  "packageManager": "pnpm@8.7.4",
+  "packageManager": "pnpm@8.7.6",
   "scripts": {
     "build": "nuxi build",
     "dev": "nuxi dev",
+    "dev:pwa": "VITE_PLUGIN_PWA=true nuxi dev",
     "start": "node .output/server/index.mjs",
+    "typecheck": "vue-tsc --noEmit",
     "lint": "eslint .",
-    "postinstall": "nuxi prepare"
+    "postinstall": "nuxi prepare",
+    "generate": "nuxi generate",
+    "start:generate": "npx serve .output/public"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.41.0",
+    "@antfu/eslint-config": "^0.42.0",
     "@iconify-json/carbon": "^1.1.21",
     "@iconify-json/ri": "^1.1.12",
     "@iconify-json/twemoji": "^1.1.12",
     "@nuxt/devtools": "^0.8.3",
     "@nuxtjs/color-mode": "^3.3.0",
     "@pinia/nuxt": "^0.4.11",
+    "@unocss/eslint-config": "^0.55.7",
     "@unocss/nuxt": "^0.55.7",
-    "@vite-pwa/nuxt": "^0.1.0",
+    "@vite-pwa/nuxt": "^0.1.1",
+    "@vue-macros/nuxt": "^1.8.1",
     "@vueuse/nuxt": "^10.4.1",
-    "eslint": "^8.48.0",
-    "nuxt": "^3.7.1",
+    "eslint": "^8.49.0",
+    "nuxt": "^3.7.3",
     "pinia": "^2.1.6",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vue-tsc": "^1.8.8"
   }
 }
