--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
+  "name": "dxh.me",
+  "type": "module",
+  "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@8.7.6",
+  "packageManager": "pnpm@8.15.1",
   "scripts": {
     "build": "nuxi build",
     "dev": "nuxi dev",
@@ -13,22 +16,23 @@
     "start:generate": "npx serve .output/public"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.42.0",
-    "@iconify-json/carbon": "^1.1.21",
-    "@iconify-json/ri": "^1.1.12",
-    "@iconify-json/twemoji": "^1.1.12",
-    "@nuxt/devtools": "^0.8.3",
-    "@nuxtjs/color-mode": "^3.3.0",
-    "@pinia/nuxt": "^0.4.11",
-    "@unocss/eslint-config": "^0.55.7",
-    "@unocss/nuxt": "^0.55.7",
-    "@vite-pwa/nuxt": "^0.1.1",
-    "@vue-macros/nuxt": "^1.8.1",
-    "@vueuse/nuxt": "^10.4.1",
-    "eslint": "^8.49.0",
-    "nuxt": "^3.7.3",
-    "pinia": "^2.1.6",
-    "typescript": "^5.2.2",
-    "vue-tsc": "^1.8.8"
+    "@antfu/eslint-config": "^2.6.3",
+    "@dxhuii/eslint-config": "^2.0.0",
+    "@iconify-json/carbon": "^1.1.28",
+    "@iconify-json/ri": "^1.1.19",
+    "@iconify-json/twemoji": "^1.1.15",
+    "@nuxt/devtools": "^1.0.8",
+    "@nuxtjs/color-mode": "^3.3.2",
+    "@pinia/nuxt": "^0.5.1",
+    "@unocss/eslint-config": "^0.58.4",
+    "@unocss/nuxt": "^0.58.4",
+    "@vite-pwa/nuxt": "^0.4.0",
+    "@vue-macros/nuxt": "^1.9.21",
+    "@vueuse/nuxt": "^10.7.2",
+    "eslint": "^8.56.0",
+    "nuxt": "^3.10.0",
+    "pinia": "^2.1.7",
+    "typescript": "^5.3.3",
+    "vue-tsc": "^1.8.27"
   }
 }
